--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -21,7 +21,9 @@
     </ng-container>
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef>Price</th>
-      <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+      <td mat-cell *matCellDef="let element">
+        {{ element.price | currency : "Rp. " : "symbol" : "1.0-0" }}
+      </td>
     </ng-container>
     <ng-container matColumnDef="photo">
       <th mat-header-cell *matHeaderCellDef>Photo</th>
